# tome

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  rustfmt.toml
.claude/: settings.json
.claude/skills/check/: SKILL.md
.github/workflows/: ci.yml
aether/: CLAUDE.md  Cargo.toml
aether-cli/: Cargo.toml  README.md
aether-cli/src/: main.rs
aether/src/: algorithm.rs  cipher.rs  error.rs  header.rs  lib.rs  parallel.rs
docs/: er.puml
docs/adr/: 001-sonyflake-ids.md  002-content-addressable-storage.md  003-local-first-sqlite.md  004-metadatastore-trait.md  005-dynamodb-single-table.md  006-declarative-ddl.md  007-tree-hash-integration.md  008-directory-listing-api.md  009-aether-in-place-aead.md  010-cli-command-taxonomy.md  011-config-hierarchy.md  012-transparent-compression.md
docs/arch/: central-sync.md  database-schema.md  dynamodb.md  encryption.md  hash-strategy.md  http-api.md  lambda-deployment.md  storage.md  web-frontend.md
docs/schema/: openapi.json  tome-db.sql
scripts/: aether_benchmark.sh
tome-cli/: Cargo.toml
tome-cli/src/: config.rs  lib.rs  main.rs  output.rs  snapshot_ref.rs
tome-cli/src/commands/: aws_auth.rs  diff.rs  files.rs  gc.rs  helpers.rs  history.rs  init.rs  log.rs  mod.rs  push.rs  remote.rs  restore.rs  scan.rs  show.rs  status.rs  store.rs  sync.rs  tag.rs  verify.rs  watch.rs
tome-cli/tests/: diff.rs  gc.rs  push.rs  remote.rs  restore.rs  scan.rs  scan_test.rs  store.rs  sync.rs  tag.rs  verify.rs
tome-cli/tests/common/: mod.rs
tome-core/: Cargo.toml
tome-core/src/: error.rs  hash.rs  id.rs  lib.rs  metadata.rs  models.rs
tome-db/: Cargo.toml  schema.sql
tome-db/examples/: generate_schema.rs
tome-db/src/: connection.rs  dsql.rs  lib.rs  ops.rs  sea_orm_store.rs  store_trait.rs
tome-db/src/entities/: blob.rs  entry.rs  entry_cache.rs  machine.rs  mod.rs  object.rs  replica.rs  repository.rs  snapshot.rs  store.rs  sync_peer.rs  tag.rs
tome-db/src/migration/: m20230901_000001_create_repositories.rs  m20230901_000002_create_blobs.rs  m20230901_000003_create_snapshots.rs  m20230901_000004_create_entries.rs  m20230901_000005_create_entry_cache.rs  m20230901_000006_create_stores.rs  m20230901_000007_create_replicas.rs  m20230901_000008_create_tags.rs  m20230901_000009_create_sync_peers.rs  m20230901_000010_create_machines.rs  m20230901_000011_add_snapshot_source.rs  m20230901_000012_add_replicas_store_idx.rs  m20230901_000013_blobs_to_objects.rs  m20230901_000014_add_depth_and_mode.rs  mod.rs
tome-db/src/ops/: blob.rs  entry.rs  entry_cache.rs  gc.rs  machine.rs  mod.rs  object.rs  replica.rs  repository.rs  snapshot.rs  store.rs  sync_peer.rs  tag.rs
tome-dynamo/: Cargo.toml
tome-dynamo/src/: keys.rs  lib.rs  serde_ddb.rs  store.rs
tome-server/: Cargo.toml
tome-server/examples/: generate_openapi.rs
tome-server/src/: error.rs  lambda.rs  lib.rs  openapi.rs  routes.rs  server.rs
tome-server/src/routes/: admin.rs  blobs.rs  machines.rs  mod.rs  objects.rs  repositories.rs  responses.rs  snapshots.rs  sync.rs
tome-store/: Cargo.toml
tome-store/src/: encrypted.rs  error.rs  factory.rs  key_source.rs  lib.rs  local.rs  s3.rs  ssh.rs  storage.rs
tome-web/: .gitignore  CLAUDE.md  README.md  env.local.example  eslint.config.mjs  package-lock.json  package.json
tome-web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
tome-web/src/app/blobs/[digest]/: page.tsx
tome-web/src/app/diff/: page.tsx
tome-web/src/app/machines/: page.tsx
tome-web/src/app/objects/[digest]/: page.tsx
tome-web/src/app/repositories/[name]/: page.tsx
tome-web/src/app/repositories/[name]/diff/: page.tsx
tome-web/src/app/repositories/[name]/files/: page.tsx
tome-web/src/app/repositories/[name]/history/: page.tsx
tome-web/src/app/snapshots/[id]/: page.tsx
tome-web/src/app/stores/: page.tsx
tome-web/src/app/sync-peers/: page.tsx
tome-web/src/app/tags/: page.tsx
tome-web/src/lib/: api.ts  types.ts
treblo/: Cargo.toml
treblo-cli/: Cargo.toml  README.md
treblo-cli/src/: main.rs
treblo/src/: hash.rs  hex.rs  lib.rs  mode.rs  object.rs  path.rs  walk.rs
treblo/src/git/: mod.rs
treblo/src/native/: mod.rs  tree.rs
