[workspace]
members = [
    "optional_derive",
    "treblo",
    "treblo_cli",
    "aether",
    "aether_cli",
    "ichno",
    "ichno_cli",
    "ichnome",
    "ichnome_cli",
    "ichnome_web",
    "tome-core",
    "tome-db",
    "tome-store",
    "tome-server",
    "tome-cli",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
aws-config = "1"
aws-sdk-s3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sonyflake = "0.2"
ssh2 = "0.9"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twox-hash = "1"
url = "2"
walkdir = "2"
