[workspace]
members = [
    "treblo",
    "treblo-cli",
    "aether",
    "aether-cli",
    "tome-core",
    "tome-db",
    "tome-store",
    "tome-server",
    "tome-cli",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-secretsmanager = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sonyflake = "0.4"
ssh2 = "0.9"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twox-hash = "2"
url = "2"
ignore = "0.4"
walkdir = "2"
toml = "0.8"
dirs = "6"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
hostname = "0.4"
blake3 = "1"
utoipa = { version = "4", features = ["axum_extras"] }
