[package]
name = "aether"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
bytes = "1"
chacha20poly1305 = "0.10"
crypto-bigint = "0.5"
thiserror = { workspace = true }
typenum = "1"
zeroize = { version = "1", features = ["derive"] }
