[package]
name = "tome-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tome"
path = "src/main.rs"

[dependencies]
tome-core = { path = "../tome-core" }
tome-db = { path = "../tome-db" }
tome-store = { path = "../tome-store" }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
sea-orm = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
walkdir = { workspace = true }
