[package]
name = "tome-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "tome"
path = "src/main.rs"

[dependencies]
tome-core = { path = "../tome-core" }
tome-db = { path = "../tome-db" }
tome-server = { path = "../tome-server" }
tome-store = { path = "../tome-store" }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ignore = { workspace = true }
hex = "0.4"
reqwest = { workspace = true }
hostname = { workspace = true }
notify = "6"
aws-config = { workspace = true }
aws-sigv4 = { workspace = true, features = ["http1"] }
aws-credential-types = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
http = "1"
