[package]
name = "tome-db"
version = "0.1.0"
edition = "2021"

[dependencies]
tome-core = { path = "../tome-core" }

anyhow = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
