[package]
name = "tome-dynamo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
tome-core = { path = "../tome-core" }
tome-db = { path = "../tome-db" }

anyhow = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
