[package]
name = "tome-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
tome-core = { path = "../tome-core" }
tome-db = { path = "../tome-db" }

anyhow = { workspace = true }
axum = { workspace = true }
hex = "0.4"
chrono = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
