[package]
name = "tome-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[features]
lambda = ["dep:lambda_http"]

[dependencies]
tome-core = { path = "../tome-core" }
tome-db = { path = "../tome-db" }

anyhow = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
hex = "0.4"
chrono = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
utoipa = { workspace = true }
lambda_http = { version = "0.13", default-features = false, features = ["apigw_http"], optional = true }

[[bin]]
name = "tome-lambda"
path = "src/bin/tome-lambda.rs"
required-features = ["lambda"]
