[package]
name = "tome-store"
version = "0.1.0"
edition = "2021"

[dependencies]
aether = { path = "../aether" }
tome-core = { path = "../tome-core" }

anyhow = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
chrono = { workspace = true }
ssh2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
