[package]
name = "treblo-cli"
version = "0.1.1"
authors = ["taskie <t@skie.jp>"]
edition = "2024"
rust-version = "1.85"
publish = false

[[bin]]
path = "src/main.rs"
name = "treblo"
doc = false

[dependencies]
clap = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
treblo = { path = "../treblo" }
